Add repository link to footer

--- a/blogs/templates/django-blogs/footer.html
+++ b/blogs/templates/django-blogs/footer.html
@@ -1,5 +1,5 @@
 <div align="center">
     {% if settings.SHOW_FOOTER_LINK %}
-    <small>Powered by <a href="#">django-blogs</a></small>
+    <small>Powered by <a href="https://github.com/arjunsinghy96/django-blogs">django-blogs</a></small>
     {% endif %}
 </div>
