Add link to home.
Adds a link to root path with BLOGS_PARENT_SITE_NAME

Signed-off-by: Arjun Singh Yadav <arjunsinghy96@gmail.com>

--- a/blogs/templates/django-blogs/base.html
+++ b/blogs/templates/django-blogs/base.html
@@ -27,6 +27,9 @@
                     <h5><a class="text-dark" href="{% url 'blogs:home' %}" style="text-decoration: none">Blogs</a></h5>
                 </div>
                 <div class="col">
+                    <h5 class="text-center font-weight-bold"><a class="text-dark" href="/" style="text-decoration: none">{{settings.PARENT_SITE_NAME}}</a></h5>
+                </div>
+                <div class="col">
                     {% if user.is_authenticated %}
                     <div class="dropdown float-right">
                         <a class="h5 text-secondary" href="#" role="button" id="optionsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
