--- a/blogs/static/css/blogs-common.css
+++ b/blogs/static/css/blogs-common.css
@@ -7,3 +7,26 @@ body {
 main {
   flex: 1 0 auto;
 }
+
+.content {
+  margin: auto;
+  display: block;
+  max-width: 700px !important;
+  word-wrap: break-word;
+  word-break: break-word;
+  font-size: 21px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.content a, .content a:visited {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: black;
+  text-decoration-line: underline;
+}
+
+@media (max-width: 767px){
+  .content {
+    font-size: 18px;
+  }
+}
