Add Upvote Feature
Adds upvote feature where any user can
upvote/like the publised post. Users are
distinguished based on the fingerprint of the
browser

Closes https://github.com/arjunsinghy96/django-blogs/issues/21

--- a/blogs/static/css/blogs-common.css
+++ b/blogs/static/css/blogs-common.css
@@ -8,6 +8,12 @@ main {
   flex: 1 0 auto;
 }
 
+.upvote-btn{
+  text-decoration: none;
+  color: red;
+  cursor: pointer;
+}
+
 .content {
   margin: auto;
   display: block;
